aggiornamento lezione oop

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OOP - Programmazione a oggetti</title>
-    <script src="./book.js"></script>
+    <script src="./model/publication.js"></script>  <!-- genitore deve venire sempre prima-->
+    <script src="./model/magazine.js"></script>
+    <script src="./model/book.js"></script>
+    <script src="./model/schoolBook.js"></script>
     <script src="./app.js"></script>    <!--   i file principali vanno importati dopo dei file servi -->
 </head>
 <body>
