--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="./model/magazine.js"></script>
     <script src="./model/book.js"></script>
     <script src="./model/schoolBook.js"></script>
+    <script src="./model/library.js"></script>
+    <script src="./gui.js"></script>
     <script src="./app.js"></script>    <!--   i file principali vanno importati dopo dei file servi -->
 </head>
 <body>
