--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="./model/book.js"></script>
     <script src="./model/schoolBook.js"></script>
     <script src="./model/library.js"></script>
+    <script src="./storage.js"></script>
     <script src="./gui.js"></script>
     <script src="./app.js"></script>    <!--   i file principali vanno importati dopo dei file servi -->
 </head>
